--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "bootstrap": "^4.4.1",
+    "reactstrap": "^8.2.0",
+    "node-sass": "^4.13.0",
+    "react-router-dom": "^5.1.2",
+    "@hapi/joi": "^16.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
